# AdventOfCode

./: .gitignore  Cargo.toml  pom.xml
src/: day02.rs
src/main/java/advent2019/day1/: FuelCounterUpper.java
src/main/java/advent2020/day1/: ReportRepair.java
src/main/java/advent2020/day10/: AdapterArray.java
src/main/java/advent2020/day11/: Adjucent.java  Decider.java  SeatingSystem.java  Visible.java
src/main/java/advent2020/day12/: NavigationInstruction.java  RainRisk.java  ShipState.java  ShipStateWaypoint.java
src/main/java/advent2020/day13/: ShuttleSearch.java
src/main/java/advent2020/day14/: DockingData.java
src/main/java/advent2020/day15/: RambunctiousRecitation.java
src/main/java/advent2020/day16/: TicketTranslation.java
src/main/java/advent2020/day17/: ConwayCubes.java  ConwayCubes4D.java
src/main/java/advent2020/day18/: OperationOrder.java  OperationOrderPart2.java
src/main/java/advent2020/day19/: MonsterMessages.java
src/main/java/advent2020/day2/: Part1.txt  PasswordPhilosophy.java  readme.md
src/main/java/advent2020/day20/: JurassicJigsaw.java
src/main/java/advent2020/day21/: AllergenAssessment.java
src/main/java/advent2020/day22/: CrabCombat.java
src/main/java/advent2020/day23/: CrabCups.java
src/main/java/advent2020/day24/: LobbyLayout.java
src/main/java/advent2020/day25/: ComboBreaker.java
src/main/java/advent2020/day3/: TobogganTrajectory.java
src/main/java/advent2020/day4/: PassportProcessing.java
src/main/java/advent2020/day5/: BinaryBoarding.java
src/main/java/advent2020/day6/: CustomCustoms.java
src/main/java/advent2020/day7/: HandyHaversacks.java  InnerBagRule.java  prolog.pl
src/main/java/advent2020/day8/: Command.java  HandheldHalting.java  HandheldHaltingWithUndo.java  Instruction.java  InstructionFunction.java
src/main/java/advent2020/day9/: EncodingError.java
src/main/java/advent2021/day1/: SonarSweep.java
src/main/java/advent2021/day2/: Dive.java
src/main/java/advent2021/day3/: BinaryDiagnostic.java
src/main/java/advent2021/day4/: GiantSquid.java
src/main/java/advent2021/day5/: HydrothermalVenture.java  Lanternfish.java
src/main/java/advent2021/day6/: Lanternfish.java
src/main/java/advent2021/day7/: TheTreacheryofWhales.java
src/main/rust/: day02.rs
src/main/rust/advent2020/: day23.rs
src/main/rust/advent2022/: Cargo.toml  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.pest  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
src/test/java/advent2019/day1/: FuelCounterUpperTest.java
src/test/java/advent2020/day1/: ReportRepairTest.java
src/test/java/advent2020/day10/: AdapterArrayTest.java
src/test/java/advent2020/day11/: SeatingSystemTest.java
src/test/java/advent2020/day12/: RainRiskTest.java  ShipStateWaypointTest.java
src/test/java/advent2020/day13/: ShuttleSearchTest.java
src/test/java/advent2020/day14/: DockingDataTest.java
src/test/java/advent2020/day15/: RambunctiousRecitationTest.java
src/test/java/advent2020/day16/: TicketTranslationTest.java
src/test/java/advent2020/day17/: ConwayCubes4DTest.java  ConwayCubesTest.java
src/test/java/advent2020/day18/: OperationOrderPart2Test.java  OperationOrderTest.java
src/test/java/advent2020/day19/: MonsterMessagesTest.java
src/test/java/advent2020/day2/: PasswordPhilosophyTest.java
src/test/java/advent2020/day20/: JigsawPieceTest.java  JurassicJigsawTest.java
src/test/java/advent2020/day21/: AllergenAssessmentTest.java
src/test/java/advent2020/day22/: CrabCombatTest.java
src/test/java/advent2020/day23/: CrabCupsTest.java
src/test/java/advent2020/day24/: LobbyLayoutTest.java
src/test/java/advent2020/day25/: ComboBreakerTest.java
src/test/java/advent2020/day3/: TobogganTrajectoryTest.java
src/test/java/advent2020/day4/: PassportProcessingTest.java
src/test/java/advent2020/day5/: BinaryBoardingTest.java
src/test/java/advent2020/day6/: CustomCustomsTest.java
src/test/java/advent2020/day7/: HandyHaversacksTest.java
src/test/java/advent2020/day8/: HandheldHaltingTest.java
src/test/java/advent2020/day9/: EncodingErrorTest.java
src/test/java/advent2021/day1/: SonarSweepTest.java
src/test/java/advent2021/day2/: DiveTest.java
src/test/java/advent2021/day3/: BinaryDiagnosticTest.java
src/test/java/common/: InputParsers.java
(+6 files in other folders)
