[package]
name = "AOC22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

enum-map = "2.4.1"
strum = "0.24"
strum_macros = "0.24"
itertools = "0.10.5"
modular = "1.0.0"
regex = "1.7.0"
substring = "1.4.5"

[[bin]]
name = "2022-day02"
path = "src/main/rust/advent2022/day02.rs"

[[bin]]
name = "2022-day03"
path = "src/main/rust/advent2022/day03.rs"

[[bin]]
name = "2022-day04"
path = "src/main/rust/advent2022/day04.rs"

[[bin]]
name = "2022-day05"
path = "src/main/rust/advent2022/day05.rs"

[[bin]]
name = "2022-day06"
path = "src/main/rust/advent2022/day06.rs"

[[bin]]
name = "2022-day07"
path = "src/main/rust/advent2022/day07.rs"

[[bin]]
name = "2022-day08"
path = "src/main/rust/advent2022/day08.rs"

[[bin]]
name = "2022-day09"
path = "src/main/rust/advent2022/day09.rs"