#![feature(is_some_with)]

[package]
name = "AOC22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

enum-map = "2.4.1"
strum = "0.24"
strum_macros = "0.24"
itertools = "0.10.5"
modular = "1.0.0"
regex = "1.7.0"
substring = "1.4.5"
num-bigint = "0.4.3"
num-traits = "0.2.15"
queues = "1.0.2"
pathfinding = "0.1.8"
pest = "2.5.1"
pest_derive = "2.5.1"
ranges = "0.3.3"
derive-new = "0.5"
cached = "0.41.0"
nom = "7.1.1"

[[bin]]
name = "2022-day02"
path = "day02.rs"

[[bin]]
name = "2022-day03"
path = "day03.rs"

[[bin]]
name = "2022-day04"
path = "day04.rs"

[[bin]]
name = "2022-day05"
path = "day05.rs"

[[bin]]
name = "2022-day06"
path = "day06.rs"

[[bin]]
name = "2022-day07"
path = "day07.rs"

[[bin]]
name = "2022-day08"
path = "day08.rs"

[[bin]]
name = "2022-day09"
path = "day09.rs"

[[bin]]
name = "2022-day10"
path = "day10.rs"

[[bin]]
name = "2022-day11"
path = "day11.rs"

[[bin]]
name = "2022-day12"
path = "day12.rs"

[[bin]]
name = "2022-day13"
path = "day13.rs"

[[bin]]
name = "2022-day14"
path = "day14.rs"

[[bin]]
name = "2022-day15"
path = "day15.rs"

[[bin]]
name = "2022-day16"
path = "day16.rs"

[[bin]]
name = "2022-day17"
path = "day17.rs"

[[bin]]
name = "2022-day18"
path = "day18.rs"

[[bin]]
name = "2022-day19"
path = "day19.rs"

[[bin]]
name = "2022-day20"
path = "day20.rs"

[[bin]]
name = "2022-day21"
path = "day21.rs"

[[bin]]
name = "2022-day22"
path = "day22.rs"

[[bin]]
name = "2022-day23"
path = "day23.rs"

[[bin]]
name = "2022-day24"
path = "day24.rs"

[[bin]]
name = "2022-day25"
path = "day25.rs"